--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:xlink="http://www.w3.org/1999/xlink">
 <head>
-    <title>Hello Bubble Chart</title>
+    <title>ExpMap - euccas.me</title>
     <meta charset="utf-8">
 
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,600,200italic,600italic&subset=latin,vietnamese' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/font-awesome.min.css">
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/d3/d3.min.js"></script>
@@ -17,19 +18,23 @@
     <script src="bower_components/bubble-chart/src/plugins/central-click/central-click.js"></script>
     <script src="bower_components/bubble-chart/src/plugins/lines/lines.js"></script>
     <script src="index.js"></script>
-    <style>
-        .bubbleChart {
-            min-width: 100px;
-            max-width: 900px;
-            height: 800px;
-            margin: 10px auto;
-        }
-        .bubbleChart svg{
-            background: #fff;
-        }
-    </style>
 </head>
-<body style="background: #fff">
-<div class="bubbleChart"/>
+
+<body>
+    <div id="wrapper">
+        <header>
+            <a href="http://euccas.me/index.html#four">
+                <p class="fa fa-chevron-circle-left"><span id='back'>Back to euccas.me</span></p>
+            </a>
+        </header>
+
+        <section class="essay">
+            <h1>ExpMap</h1>
+            <p>My development skills, and the notes I took for each of them. The notes are created and organized on <a href="https://trello.com/" target="_blank">Trello</a>. The bubble chart is built with <a href="https://d3js.org/" target="_blank">D3.js</a>, and published on <a href="https://github.com/euccas/expmap" target="_blank">GitHub</a>.</p>
+        </section>
+
+        <div class="bubbleChart"></div>
+
+    </div>
 </body>
 </html>
