--- a/index.html
+++ b/index.html
@@ -22,15 +22,12 @@
 
 <body>
     <div id="wrapper">
-        <header>
-            <a href="http://euccas.me/index.html#four">
-                <p class="fa fa-chevron-circle-left"><span id='back'>Back to euccas.me</span></p>
-            </a>
-        </header>
 
         <section class="essay">
             <h1>ExpMap</h1>
-            <p>My development skills, and the notes I took for each of them. The notes are created and organized on <a href="https://trello.com/" target="_blank">Trello</a>. The bubble chart is built with <a href="https://d3js.org/" target="_blank">D3.js</a>, and published on <a href="https://github.com/euccas/expmap" target="_blank">GitHub</a>.</p>
+            <h2>by <a href="http://euccas.me">Euccas</a></h2>
+            <p>Being a software engineer, I keep learning and practicing my skills every single day. I build this ExpMap to show a collection of the technical skills that I have cultivated, and the notes I kept for them.</p>
+            <p>My notes are created and organized on <a href="https://trello.com/" target="_blank">Trello</a>, which is a great tool for organizing and tracking your projects. This bubble chart is built with <a href="https://d3js.org/" target="_blank">D3.js</a>, and you can view the source <a href="https://github.com/euccas/expmap" target="_blank">here on GitHub</a>.</p>
         </section>
 
         <div class="bubbleChart"></div>
