Add the image of ExpMap

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
     <div id="wrapper">
 
         <section class="essay">
-            <h1>ExpMap</h1>
+            <h1> ExpMap </h1>
+            <img src="http://www.euccas.me/home/images/goodie_expmap_icon.png">
             <h2>by <a href="http://euccas.me">Euccas</a></h2>
-            <p>Being a software engineer, I keep learning and practicing my skills every single day. I build this ExpMap to show a collection of the technical skills that I have cultivated, and the notes I kept for them.</p>
-            <p>My notes are created and organized on <a href="https://trello.com/" target="_blank">Trello</a>, which is a great tool for organizing and tracking your projects. This bubble chart is built with <a href="https://d3js.org/" target="_blank">D3.js</a>, and you can view the source <a href="https://github.com/euccas/expmap" target="_blank">here on GitHub</a>.</p>
+            <p>Being a software engineer, I keep learning and practicing my skills every single day. I build this ExpMap as a collection of the technical skills that I have cultivated, and the notes I kept for them.</p>
+            <p>My notes are created and organized on <a href="https://trello.com/" target="_blank">Trello</a>, which is a great tool for organizing and tracking projects and information. This bubble chart is built with <a href="https://d3js.org/" target="_blank">D3.js</a>, and you can view the source <a href="https://github.com/euccas/expmap" target="_blank">here on GitHub</a>.</p>
         </section>
 
         <div class="bubbleChart"></div>
