update image url.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <section class="essay">
             <h1> ExpMap </h1>
-            <img src="https://www.euccas.me/home/images/goodie_expmap_icon.png">
+            <img src="images/work_expmap_icon.png">
             <h2>by <a href="https://euccas.me">Euccas</a></h2>
             <p>Being a software engineer, I keep learning and practicing my skills every single day. I build this ExpMap as a collection of the technical skills that I have cultivated, and the notes I took about them.</p>
             <p>Before 2017, my notes were created and organized on <a href="https://trello.com/" target="_blank">Trello</a>, which is a great tool for organizing and tracking projects and information. I started to use <a href="https://github.com/euccas/ExpMap/wiki" target="_blank">GitHub Wiki</a> to keep my notes in 2017.</p>
